@@ -1822,6 +1822,14 @@ td {
       <tt>date</tt>, <tt>author</tt>, and <tt>file</tt>.</td>
 </tr>
 <tr class="varlevel1">
+  <td class="varname">row_limit_reached</td>
+  <td>Boolean</td>
+  <td>Indicates whether the internal database row limit threshold (set
+      via the <code>cvsdb.row_limit</code>
+      and <code>cvsdb.rss_row_limit</code> configuration options) was
+      reached by the query.</td>
+</tr>
+<tr class="varlevel1">
   <td class="varname">show_branch</td>
   <td>Boolean</td>
   <td>Indicates whether or not to list branch names in the results. True
